# Myrdal4

./: README.md  implementation_plan.md  myrdal_libraries.md  myrdal_spec.md  pyproject.toml
.auteng/: config.json
myrdal/: main.py
myrdal/agents/: __init__.py  myrdal_assistant.py
myrdal/knowledge/: abstract_thinking.py  explainable_ai.py  knowledge_graph.py  knowledge_integration.py  multilayer_knowledge_graph.py  multilingual.py  social_cognition.py  world_model_nexus.py
myrdal/memory/: long_term.py  manager.py  short_term.py
myrdal/metacognition/: metacognition.py
myrdal/reasoning/: causal_reasoner.py
tests/: test_causal_reasoner.py  test_memory_manager.py  test_metacognition.py  test_myrdal_mcp.py  test_team.py  test_ui_integration.py
ui/: main.py
webui/: README.md  main.py  run.py
webui/static/css/: styles.css
webui/static/js/: app.js
webui/templates/: api_docs.html  index.html
