[project]
name = "myrdal4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.5.7",
    "autogen-core>=0.5.6",
    "autogen-ext[mcp,openai]>=0.5.6",
    "flet[all]>=0.28.2",
    "numpy>=1.24.0,<2.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "networkx>=3.0.0",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "tqdm>=4.67.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.0",
    "pillow>=11.0.0",
    "qrcode>=7.4.2",
    "watchdog>=4.0.0",
    "redis>=5.0.0",
    "ray>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "matplotlib>=3.8.0",
    "plotly>=5.20.0",
    "spacy>=3.7.0",
    "stanza>=1.8.0",
    "transformers>=4.41.0",
    "anthropic>=0.25.0",
    "huggingface-hub>=0.23.0",
    "pyzmq>=26.0.0",
    "prometheus-client>=0.20.0",
    "jaeger-client>=4.8.0",
    "codecarbon>=2.3.0",
    "shap>=0.45.0",
    "lime>=0.2.0.1",
    "gymnasium>=0.29.1",
    "stable-baselines3>=2.3.0",
    "pettingzoo>=1.24.0",
    "causal-learn<=0.1.4.1",
    "dowhy>=0.11.0",
    "pymc>=5.13.0",
    "pgmpy>=0.1.25",
    "pomegranate>=1.0.0",
    "bayespy>=0.5.23",
    "nltk>=3.8.0", # WordNet
    "neo4j>=5.19.0",
    "torch>=2.3.0",
    "torch-geometric>=2.5.0",
    "igraph>=0.11.4",
    "setfit>=0.7.0",
    "onnxruntime>=1.18.0",
    "coremltools>=7.0.0",
    "qiskit>=1.0.2",
    "pennylane>=0.36.0",
    "cirq>=1.3.0",
    "presidio-analyzer>=2.2.327",
    "opendp>=0.8.0",
    "aif360>=0.6.0",
    "transformers",
    "langdetect>=1.0.9",
    "sentencepiece>=0.2.0",
    "sacremoses>=0.1.1",
]
